--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "argon2": "^0.40.3",
         "better-sqlite3": "^11.0.0",
+        "dotenv": "^16.4.5",
         "h3": "^1.11.1"
     },
     "devDependencies": {
