--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "run": "tsx ./src/index.ts",
+        "dev": "tsx watch ./src/index.ts",
+        "tailwind:dev": "tailwindcss -i ./src/templates/app.css -o ./public/output.css --watch",
+        "tailwind:build": "tailwindcss -i ./src/templates/app.css -o ./public/output.css --minify"
     },
     "keywords": [],
     "author": "",
@@ -19,6 +22,8 @@
     "devDependencies": {
         "@types/better-sqlite3": "^7.6.10",
         "@types/node": "^20.14.2",
+        "tailwindcss": "^3.4.4",
+        "tsx": "^4.15.2",
         "typescript": "^5.4.5"
     }
 }
