--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "run": "tsx ./src/index.ts",
+        "start": "tsx ./src/index.ts",
         "dev": "tsx watch ./src/index.ts",
         "tailwind:dev": "tailwindcss -i ./src/templates/app.css -o ./public/output.css --watch",
         "tailwind:build": "tailwindcss -i ./src/templates/app.css -o ./public/output.css --minify"
